it finnaly works

--- a/8.7.html
+++ b/8.7.html
@@ -2,10 +2,9 @@
   <head>
     <meta charset="utf-8">
     <title>Tabele</title>
-    <link rel="stylesheet" href="style.css">
   </head>
   <body>
 
-    <script type="text/javascript" src="8.7script.js"></script>
+    <script type="text/javascript" src="./js/8.7script.js"></script>
   </body>
 </html>
